# zksync-era

./: Cargo.toml  README.md
.github/release-please/: manifest.json
core/: CHANGELOG.md
core/lib/basic_types/: Cargo.toml
core/lib/basic_types/src/: lib.rs
core/lib/commitment_utils/: Cargo.toml
core/lib/commitment_utils/src/: lib.rs
core/lib/dal/src/: lib.rs
core/lib/l1_contract_interface/: Cargo.toml
core/lib/l1_contract_interface/src/i_executor/commit/: kzg.rs
core/lib/merkle_tree/src/hasher/: proofs.rs
core/lib/merkle_tree/tests/integration/: merkle_tree.rs  recovery.rs
core/lib/multivm/: Cargo.toml
core/lib/object_store/src/: file.rs
core/lib/tee_verifier/: Cargo.toml
core/lib/tee_verifier/src/: lib.rs
core/lib/types/src/: block.rs
core/lib/zksync_core/: Cargo.toml
core/lib/zksync_core/src/: genesis.rs  lib.rs
core/lib/zksync_core/src/eth_watch/: client.rs
core/lib/zksync_core/src/metadata_calculator/: updater.rs
core/lib/zksync_core/src/sgx_2fa/: mod.rs
core/lib/zksync_core/src/tee_verifier_input_producer/: mod.rs
core/node/shared_metrics/src/: lib.rs
docs/guides/: repositories.md
docs/specs/zk_evm/vm_specification/compiler/: system_contracts.md
prover/: CHANGELOG.md
prover/proof_fri_compressor/: Cargo.toml
prover/prover_fri/: Cargo.toml
prover/prover_fri/src/: prover_job_processor.rs
prover/prover_fri_types/: Cargo.toml
prover/prover_fri_types/src/: lib.rs
prover/vk_setup_data_generator_server_fri/: Cargo.toml
prover/witness_generator/: Cargo.toml
prover/witness_generator/src/: utils.rs
(+20 files in other folders)
