[package]
name = "zksync_tee_verifier"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zksync_basic_types.workspace = true
zksync_prover_interface.workspace = true
zksync_object_store.workspace = true
zksync_types.workspace = true
multivm.workspace = true
serde.workspace = true
